test/spec_vectors/store/fail/module_19.wat
(module (memory 1) (func $type-address-empty-in-block (i32.const 0) (i32.const 0) (block (i32.store))))